prepare for 0.10.4 release